test/operator/negate_nonnum.lox
-"s" // error:  can't negate type other than int and float
